"fixed floatinf issues and aligned the free plan section"

--- a/main.css
+++ b/main.css
@@ -15,7 +15,9 @@
     color: white;
     font-family: 'Anton', sans-serif;
 }
-
+.plan__list{
+    margin: auto;
+}
 .plan{
     background: #d5ffdc;
     padding: 16px;
